--- a/index.html
+++ b/index.html
@@ -2,194 +2,188 @@
 
 
 
-<div class="scroller relative w-full flex gap-6 snap-x snap-proximity overflow-x-auto pb-14">
-  <div class="snap-center shrink-0">
-    <div class="shrink-0 w-4 sm:w-48"></div>
-  </div>
-  <div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="scroller relative w-full flex gap-6 overflow-x-auto pb-14 px-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-01.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-02.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-03.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-04.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-05.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-06.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-07.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-08.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-09.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-10.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-11.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-12.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-13.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-14.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-15.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-16.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-17.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-18.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-19.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-20.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-21.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-22.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-23.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-24.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-25.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-26.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-27.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-28.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-29.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-30.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-31.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-32.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-33.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-34.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-35.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-36.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-37.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-38.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-39.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-40.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-41.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-42.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-43.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-44.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-45.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-46.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-47.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-48.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-49.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-50.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-51.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-52.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-53.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-54.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-55.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-56.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-57.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-58.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-59.png">
 </div>
-<div class="card snap-center shrink-0 first:pl-8 last:pr-8">
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-60.png">
 </div>
 
-  <div class="snap-center shrink-0">
-    <div class="shrink-0 w-4 sm:w-48"></div>
-  </div>
 </div>
 
 <ul class="lightrope">
@@ -271,7 +265,7 @@
             </button>
           </dt>
           <dd class="mt-2 pr-12" id="faq-0">
-            <p class="text-base leading-7 text-white">This is a deck of cards with Christmas movies on it. That's it. It's not a game, it's not a "thing". It' just a buncha cards and each one has a Christmas movie on it.</p>
+            <p class="text-base leading-7 text-white">This is a deck of cards with Christmas movies on it. That's it. It's not a game, it's not a "thing". It' just a buncha cards and each one has a Christmas movie on it. Clark from <a class="font-semibold underline decoration-2 underline-offset-2" href="https://games.superfun.team" target="_blank">Superfun Games</a> made it.</p>
           </dd>
         </div>
 
@@ -455,6 +449,49 @@ window.addEventListener('deviceorientation', function(event) {
         card.style.transformOrigin = 'center';
     });
 });
+
+window.onload = function() {
+    // Step 1: Get all card elements
+    const cards = document.querySelectorAll('.card');
+
+    // Step 2: Generate a shuffled array of order indices
+    const orderIndices = Array.from({ length: cards.length }, (_, i) => i);
+    shuffleArray(orderIndices);
+
+    // Step 3: Apply the respective order class to each card
+    cards.forEach((card, index) => {
+        card.classList.add(`order-${orderIndices[index]}`);
+        
+        // Adding opacity-100 class to the card
+        card.classList.add('opacity-100');
+    });
+
+    // Step 4: Look for .scroller and add classes "snap-x" and "snap-proximity"
+    const scrollers = document.querySelectorAll('.scroller');
+    scrollers.forEach(scroller => {
+        scroller.classList.add('snap-x', 'snap-proximity');
+    });
+}
+
+// Assuming you already have a shuffleArray function elsewhere in your code
+
+
+// Fisher-Yates (aka Knuth) Shuffle
+function shuffleArray(array) {
+    let currentIndex = array.length, randomIndex;
+
+    while (currentIndex !== 0) {
+        randomIndex = Math.floor(Math.random() * currentIndex);
+        currentIndex--;
+
+        // Swap elements
+        [array[currentIndex], array[randomIndex]] = [array[randomIndex], array[currentIndex]];
+    }
+
+    return array;
+}
+
+
 
 
 
