--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
 <div class="card opacity-0 snap-center shrink-0 transition-opacity">
     <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-60.png">
 </div>
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
+    <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-61.png">
+</div>
+<div class="card opacity-0 snap-center shrink-0 transition-opacity">
+    <img class="shrink-0 aspect-[2.5/3.5] drop-shadow-3xl w-[75vw] md:w-[30vw] object-cover" src="assets/images/film-62.png">
+</div>
 
 </div>
 
