--- a/_imports/head.html
+++ b/_imports/head.html
@@ -7,8 +7,8 @@
   <meta name="theme-color" content="#EF4444">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@34,400,1,100" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dist/css/style.css" />
   <sergey-slot>
     <title>Christmas Cards.wtf</title>
@@ -41,7 +41,7 @@
 
 <body class="bg-gray-200 pt-20">
 
-<header class="fixed bg-white flex w-full p-4 z-10 top-0 justify-between items-center">
+<header class="fixed bg-white flex w-full p-4 z-10 top-0 justify-between items-center z-20">
   <h1 class="font-bold flex items-center"><span class="material-symbols-outlined text-green-600 pr-2">view_carousel</span><span class="text-red-600">Christmas Cards</span></h1>
   <a href="https://twitter.com/intent/tweet?text=%40clarklab%20you%20should%20add%20%5Bmovie%20title%5D%20to%20the%20list%21" target="_blank" class="bg-green-600 text-white rounded-md font-semibold px-2 py-1 text-sm">Add Card</a>
 </header>
