--- a/_imports/head.html
+++ b/_imports/head.html
@@ -7,8 +7,31 @@
   <meta name="theme-color" content="#EF4444">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@34,400,1,100" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&display=swap" rel="stylesheet">
+  <link
+    rel="preload"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@34,400,1,100"
+    as="style"
+    onload="this.onload=null;this.rel='stylesheet'"
+  />
+  <link
+    rel="preload"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&display=swap"
+    as="style"
+    onload="this.onload=null;this.rel='stylesheet'"
+  />
+  <noscript>
+      <link
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@34,400,1,100"
+          rel="stylesheet"
+          type="text/css"
+      />
+      <link
+          href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap"
+          rel="stylesheet"
+          type="text/css"
+      />
+  </noscript>
+
   <link rel="stylesheet" href="dist/css/style.css" />
   <sergey-slot>
     <title>Christmas Cards.wtf</title>
